added a simple example of pattern Decorator (for class Buy) - added an interface IBuy and new class WrappedBuy

--- a/Store.csproj
+++ b/Store.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Products\Product.cs~RF2886eb2f.TMP" />
+  </ItemGroup>
+
 </Project>
