--- a/Store.csproj
+++ b/Store.csproj
@@ -11,4 +11,8 @@
     <None Remove="Products\Product.cs~RF2886eb2f.TMP" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Diagrams\" />
+  </ItemGroup>
+
 </Project>
